# galvani

./: Cargo.toml  README.md
.github/workflows/: ci.yml
galvani-gtk/: Cargo.toml  README.md
galvani-gtk/src/: build.rs  main.rs
src/: lib.rs  main.rs  widget.rs
