[package]
name = "galvani-gtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
gtk = { version = "0.6.6", package = "gtk4" }
adw = { version = "0.4.4", package = "libadwaita" }
rstml = "0.10.6"
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = "2.0.22"
